<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/people_item"
            android:icon="@drawable/ic_people"
            android:title="@string/people" />
        <item
            android:id="@+id/compliments_item"
            android:icon="@drawable/ic_compliments"
            android:title="@string/compliments" />
        <item
            android:id="@+id/insights_item"
            android:icon="@drawable/ic_insights"
            android:title="@string/insights" />
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/share_app_item"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app" />
        <item
            android:id="@+id/send_feedback_tem"
            android:icon="@drawable/ic_feedback"
            android:title="@string/send_feedback_menu_item" />
        <item
            android:id="@+id/help_item"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/privacy_policy_item"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/privacy_policy_heading" />
    </group>

</menu>
